[package]
name = "leloko-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
redis = "0.32.5"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid" ] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { "0.6.6" features = [ "cors" ]}
